2024-12-30T12:14:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12546371115 # 741
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
* notice: last 14d: unq all: 24 78
* notice: prev accum: outdated-unq outdated-all / unq all: 913 4842 / 936 4919
* notice: next accum: outdated-unq outdated-all / unq all: 913 4842 / 937 4920
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-30]

2024-12-30T00:39:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12540058222 # 740
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
* notice: last 14d: unq all: 23 77
* notice: prev accum: outdated-unq outdated-all / unq all: 913 4842 / 935 4918
* notice: next accum: outdated-unq outdated-all / unq all: 913 4842 / 936 4919
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-29]

2024-12-29T00:41:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12531025128 # 738
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-29
* notice: last 14d: unq all: 22 76
* notice: prev accum: outdated-unq outdated-all / unq all: 913 4842 / 934 4916
* notice: next accum: outdated-unq outdated-all / unq all: 913 4842 / 935 4918
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-12-28]

2024-12-28T00:37:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12522205206 # 736