@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-30T12:14:06Z",
-  "count_outdated" : 4842,
-  "uniques_outdated" : 913,
+  "timestamp" : "2024-12-31T00:37:01Z",
+  "count_outdated" : 4852,
+  "uniques_outdated" : 916,
   "count" : 4920,
   "uniques" : 937,
   "views" : [
-    {
-      "timestamp": "2024-12-16T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-12-17T00:00:00Z",
       "count": 2,
