@@ -1,3 +1,12 @@
+2024-12-31T00:37:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12553677439 # 742
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-31
+* notice: last 14d: unq all: 21 68
+* notice: prev accum: outdated-unq outdated-all / unq all: 913 4842 / 937 4920
+* notice: next accum: outdated-unq outdated-all / unq all: 916 4852 / 937 4920
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-16] / []
+
 2024-12-30T12:14:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12546371115 # 741
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
